# fool

./: .gitignore  CMakeLists.txt  OpenCLImageTypes.def  TokenKinds.def  TransformTypeTraits.def  build.bat  build.py  build_clang.bat  clang_tokenkind.txt  common.h  copy_c_files.py  ctok.c  lcp.c  lcp.h  lex.c  license.txt  notes.txt  print_tokens.c  print_tokens.h  readme.md  run_cmake.bat  scrub_ws.c  spew.py  test.bat  test.py  test_ctok.py  unicode.c  unicode.h
ctok/: alloc.c  alloc.h  ch.c  ch.h  count_of.h  file.c  file.h  gen_tests.c  gen_tests.h  lcp.c  lcp.h  lex.c  lex.h  lex_state.c  lex_state.h  main.c  panic.c  panic.h  peek.c  peek.h  print_tokens.c  print_tokens.h  print_toks_in_file.c  print_toks_in_file.h  test.c  test.h  unicode.c  unicode.h  unicode_ids.c  unicode_ids.h  utf8.c  utf8.h  windows_crap.c  windows_crap.h  windows_helpers.c  windows_helpers.h
test/: test.txt
test/punct/: punct_11.txt  punct_12.txt  punct_2.txt  punct_4.txt
test_files/: readme.md
